# SNN-Mouse-Simulation

./: .gitignore  CMakeLists.txt  README.md  SNN_CONFIGURATION.md
data/: SNNConfig.yaml
src/: main.cpp
src/core/: NetworkTopologyLoader.cpp  NetworkTopologyLoader.hpp  SNN.cpp  SNN.hpp  snn_core.cpp  snn_core.hpp
src/exceptions/: SNNParseException.cpp  SNNParseException.hpp
src/utility/: Random.cpp  Random.hpp  WeightGenerator.cpp  WeightGenerator.hpp
